src/objects/wbsendit__Smart_Email_Template__c.object
<CustomObject>
    <fields>
        <fullName>wbsendit__Add_Recipients_to_List__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Add Recipients to List</label>
        <referenceTo>wbsendit__Subscriber_List__c</referenceTo>
        <relationshipLabel>Smart Emails</relationshipLabel>
        <relationshipName>Smart_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Campaign_Monitor_Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Campaign Monitor Client</label>
        <referenceTo>wbsendit__Client__c</referenceTo>
        <relationshipLabel>Smart Emails</relationshipLabel>
        <relationshipName>Smart_Emails</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>wbsendit__Created__c</fullName>
        <label>Created</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>wbsendit__From__c</fullName>
        <label>From</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__HTML_Preview__c</fullName>
        <label>HTML Preview</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>wbsendit__Managed__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Managed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>wbsendit__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Reply_To__c</fullName>
        <label>Reply To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Smart_Email_Id__c</fullName>
        <externalId>true</externalId>
        <label>Smart Email Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Active</fullName>
                </value>
                <value>
                    <fullName>Draft</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>wbsendit__Subject__c</fullName>
        <label>Subject</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>wbsendit__Text_Preview__c</fullName>
        <label>Text Preview</label>
        <type>Url</type>
    </fields>
    <label>Smart Email</label>
    <listViews>
        <fullName>wbsendit__All</fullName>
        <columns>NAME</columns>
        <columns>wbsendit__Name__c</columns>
        <columns>wbsendit__Subject__c</columns>
        <columns>wbsendit__From__c</columns>
        <columns>wbsendit__Status__c</columns>
        <columns>wbsendit__Created__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SE-{0}</displayFormat>
        <label>Smart Email Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Smart Emails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>